--- a/test/app/app.component.html
+++ b/test/app/app.component.html
@@ -1,4 +1,4 @@
-<p>ngx-popper testing started...</p>
+<p>ngx-smart-popper testing started...</p>
 <div>
   <div class="popperTarget" popper="testing" popperPlacement="bottom" [popperShowOnStart]="true">popper</div>
 </div>
